# TeXLite

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.3940908  LICENSE  README.md  README.md.backup  resource.qrc
examples/article/: main.tex
examples/beamer/: main.tex
examples/report/: main.tex
qml/: AppFooter.qml  AppHeader.qml  AppMenuBar.qml  AppMenuItem.qml  AppMessageDialog.qml  AppPopupMenu.qml  BusyPDFIndicator.qml  CompilationErrorView.qml  DirTreeNode.qml  DirView.qml  FileSystem.qml  FilterDelegateModel.qml  IntellisenseMenu.qml  LatexListModel.qml  LatexTextEdit.qml  LatexTextEditWithIntellisense.qml  LatexTextEditWithIntellisenseAndLineCount.qml  Main.qml  PDFView.qml  ProjectView.qml  TexEngines.qml
src/: filesystem.cpp  filesystem.h  main.cpp  syntaxhighlihgter.cpp  syntaxhighlihgter.h  tempfolderguard.cpp  tempfolderguard.h  texengine.cpp  texengine.h  textcharformat.h
